# tiny-autograd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_walkthrough.ipynb
scripts/: benchmark_parity.py  plot_results.py  train_moons.py
tests/: gradcheck.py  test_accumulation.py  test_engine_ops.py  test_gradcheck.py  test_nn.py  test_optim.py  test_smoke.py  test_tensor.py  test_torch_parity.py  test_train_moons.py
tinygrad_scratch/: __init__.py  engine.py  nn.py  optim.py  tensor.py
